# genpypi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
genpypi/: README.md  cli.py
genpypi/templates/: README.md  github_workflow.yml  gitignore  init.py  pyproject.toml  setup.py  src_init.py
