[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genpypi"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Python project generator for PyPI packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
]

[project.scripts]
genpypi = "genpypi.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/genpypi"
"Bug Tracker" = "https://github.com/yourusername/genpypi/issues" 